# ros2_ws_test2

./: .gitignore  COMPLETE_FIX_SUMMARY.md  DEXTER_HARDWARE_QUICKSTART.md  DEXTER_SETUP_COMPLETE.md  MKS_SERVO_CAN_RESTORED.md  MOTOR_CONTROLLER_SETUP_FIXED.md  README.md  README_FINAL.md  START_HERE.sh  test_dexter_hardware.sh  verify_dexter_setup.sh
src/: dexter_workspace_analysis.py  diagnostic_check.py  fix_pwm0_clock  fix_pwm0_clock.c  state_machine.txt  test_joint_cmd.py  worknote.txt  worknote_desk.txt
src/dexter_bringup/: CMakeLists.txt  package.xml
src/dexter_bringup/config/: dexter_moveit.rviz  ros2_controllers.yaml
src/dexter_bringup/launch/: dexter.launch.xml
src/dexter_commander_cpp/: CMakeLists.txt  package.xml
src/dexter_commander_cpp/src/: commander.cpp
src/dexter_control_panel/: package.xml  setup.cfg  setup.py
src/dexter_control_panel/dexter_control_panel/: control_panel.py
src/dexter_description/: CMakeLists.txt  package.xml
src/dexter_description/launch/: display.launch.xml
src/dexter_description/rviz/: urdf_config.rviz
src/dexter_description/urdf_dexter/: robot.urdf
src/dexter_description/urdf_dexter/assets/: ._part4.stl  base.part  base.stl  part1.stl  part2.part  part3.part  part3.stl  part5.part
src/dexter_hardware/: CMakeLists.txt  HARDWARE_INTERFACE_GUIDE.md  PIPELINE_TEST_GUIDE.md  README.md  SCRIPT_COMPARISON.md  package.xml
src/dexter_hardware/config/: hardware_params.yaml
src/dexter_hardware/dexter_hardware/: __init__.py
src/dexter_hardware/launch/: hardware_bridge.launch.xml  motor_controller.launch.xml
src/dexter_hardware/mks_servo_can/: LIBRARY_DOCUMENTATION.md  __init__.py  can_commands.py  can_motor.py  can_set.py  mks_servo.py  setup.py
src/dexter_hardware/mks_servo_can/mks_servo_can.egg-info/: PKG-INFO  SOURCES.txt
src/dexter_hardware/scripts/: dexter_hardware_bridge.py  dexter_hardware_bridge.py.bak3  motor_controller_node.py  test_angle_precision.py  test_motor_response.py  test_pipeline_angle.py  test_precise_speed.py  test_ramp_profile.py  test_speed_calibration.py
src/dexter_hardware_interfaces/: CMakeLists.txt  package.xml
src/dexter_hardware_interfaces/msg/: MotorAbsoluteCommand.msg
src/dexter_interfaces/: CMakeLists.txt  package.xml
src/dexter_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dexter_moveit_config/config/: dexter_simplify.ros2_control.xacro  dexter_simplify.srdf  dexter_simplify.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/dexter_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/dexter_simplify/: CMakeLists.txt  package.xml  robot.urdf
src/dexter_simplify/assets/: part1.part  part2.stl  part4.part  part4.stl  part5.stl  part6.part  part6.stl
src/esp32_motor_controller/: REALTIME_SETUP.md  package.xml  setup.cfg  setup.py
src/esp32_motor_controller/esp32_motor_controller/: realtime_command_client.py  uart_bridge_node.py
src/motor_control_state_machine/: INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  UPDATE_SUMMARY.md  package.xml  setup.cfg  setup.py
src/motor_control_state_machine/config/: perform1.yaml  setup.yaml
src/motor_control_state_machine/motor_control_state_machine/: motor_control_state_machine.py
src/motor_control_state_machine/motor_control_state_machine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: my_robot_moveit.rviz
src/my_robot_bringup/launch/: my_robot.launch.xml
src/my_robot_commander_cpp/: CMakeLists.txt  package.xml
src/my_robot_commander_cpp/src/: commander_template.cpp  test_moveit.cpp
src/my_robot_description/: package.xml
src/my_robot_description/launch/: display.launch.xml  display_refactored.launch.xml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: arm.xacro  common_properties.xacro  gripper.xacro  my_robot.ros2_control.xacro  my_robot.urdf.xacro
src/my_robot_description/urdf_refactored/: arm.xacro  common_properties.xacro  gripper.xacro  my_robot.ros2_control.xacro  my_robot.urdf.xacro
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_moveit_config/: .setup_assistant
src/my_robot_moveit_config/config/: my_robot.srdf
src/servo_control/: launch_servo.sh  package.xml  setup.cfg  setup.py
src/servo_control/servo_control/: servo_node.py
src/servo_control/test/: test_servo.py
src/servo_hw_pwm/: CMakeLists.txt  README.md  package.xml
src/servo_hw_pwm/config/: servo_params.yaml
src/servo_hw_pwm/launch/: servo_hw_pwm.launch.py
src/servo_hw_pwm/src/: fix_pwm0_clock.c  servo_hw_pwm_node.cpp
src/servo_hw_pwm/test/: test_angle_conversion.cpp
