<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexter_commander_cpp</name>
  <version>0.0.0</version>
  <description>Commander node for Dexter robot arm using MoveIt</description>
  <maintainer email="seantsai06@gmail.com">sean</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>example_interfaces</depend> 
  <depend>dexter_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
