<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexter_description</name>
  <version>0.0.0</version>
  <description>URDF and mesh files for Dexter robot</description>
  <maintainer email="sean@example.com">sean</maintainer>
  <license>Apache-2.0</license>

    <build_depend>ament_cmake</build_depend>
    <exec_depend>ament_cmake</exec_depend>
    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>ament_index_cpp</exec_depend>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
