<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>servo_hw_pwm</name>
  <version>0.1.0</version>
  <description>
    Production-ready ROS 2 node for MG996R servo control via RP1 hardware PWM
    on Raspberry Pi 5. Uses direct register access to bypass broken sysfs clock.
  </description>
  <maintainer email="sean@todo.todo">sean</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
